--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.0",
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.2",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.12.0",
