--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.6.0",
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
+    "next-compose-plugins": "^2.2.1",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "18.0.0",
