--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
     "next-compose-plugins": "^2.2.1",
+    "owl.carousel": "^2.3.4",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "18.0.0",
@@ -25,7 +26,10 @@
     "webpack": "^5.72.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
