--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.12.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
     "antd": "^4.19.5",
     "bootstrap": "^5.1.3",
+    "contentful": "^9.1.34",
     "next": "12.1.4",
     "next-compose-plugins": "^2.2.1",
     "owl.carousel": "^2.3.4",
