--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
+    "@popperjs/core": "^2.11.6",
     "antd": "^4.19.5",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.34",
+    "jquery-1.8": "^1.8.3",
     "next": "12.1.4",
     "next-compose-plugins": "^2.2.1",
     "owl.carousel": "^2.3.4",
@@ -28,6 +30,7 @@
     "webpack": "^5.72.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "autoprefixer": "^10.4.7",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
